// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Switch Default 1`] = `
<div
  class="fd-form-group"
>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <div
      class="fd-form-label"
      id="label1"
    >
      Default (Cozy) Switch
    </div>
    
        
    <label
      class="fd-switch__label"
    >
      
            
      <span
        class="fd-switch"
      >
        
                
        <input
          aria-labelledby="label1"
          class="fd-switch__input"
          id="y21YO3251"
          name=""
          type="checkbox"
          value=""
        />
        
                
        <div
          class="fd-switch__wrapper"
        >
          
                    
          <div
            class="fd-switch__track"
          >
            
                        
            <span
              class="fd-switch__handle"
              role="presentation"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </span>
      
        
    </label>
    
    
  </div>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <div
      class="fd-form-label"
      id="label2"
    >
      Compact Switch
    </div>
    
        
    <label
      class="fd-switch__label"
    >
      
            
      <span
        class="fd-switch fd-switch--compact"
      >
        
                
        <input
          aria-labelledby="label2"
          class="fd-switch__input"
          id="y21YO3431"
          name=""
          type="checkbox"
          value=""
        />
        
                
        <div
          class="fd-switch__wrapper"
        >
          
                    
          <div
            class="fd-switch__track"
          >
            
                        
            <span
              class="fd-switch__handle"
              role="presentation"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </span>
      
        
    </label>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Switch Semantic Switch 1`] = `
<div
  class="fd-form-group"
>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <label
      class="fd-form-label"
      id="label5"
    >
      Semantic Switch
    </label>
    
        
    <label
      class="fd-switch__label"
    >
      
            
      <span
        class="fd-switch fd-switch--semantic"
      >
        
                
        <input
          aria-labelledby="label5"
          class="fd-switch__input"
          id="y21YO3251"
          name=""
          type="checkbox"
          value=""
        />
        
                
        <div
          class="fd-switch__wrapper"
        >
          
                    
          <div
            class="fd-switch__track"
          >
            
                        
            <i
              class="fd-switch__icon--on fd-switch__icon sap-icon--accept"
              role="presentation"
            />
            
                        
            <span
              class="fd-switch__handle"
              role="presentation"
            />
            
                        
            <i
              class="fd-switch__icon--off fd-switch__icon sap-icon--decline"
              role="presentation"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </span>
      
        
    </label>
    
    
  </div>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <label
      class="fd-form-label"
      id="label6"
    >
      Semantic Compact Switch
    </label>
    
        
    <label
      class="fd-switch__label"
    >
      
            
      <span
        class="fd-switch fd-switch--semantic fd-switch--compact"
      >
        
                
        <input
          aria-labelledby="label6"
          class="fd-switch__input"
          id="y21YO3431"
          name=""
          type="checkbox"
          value=""
        />
        
                
        <div
          class="fd-switch__wrapper"
        >
          
                    
          <div
            class="fd-switch__track"
          >
            
                        
            <i
              class="fd-switch__icon--on fd-switch__icon sap-icon--accept"
              role="presentation"
            />
            
                        
            <span
              class="fd-switch__handle"
              role="presentation"
            />
            
                        
            <i
              class="fd-switch__icon--off fd-switch__icon sap-icon--decline"
              role="presentation"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </span>
      
        
    </label>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Switch With Text 1`] = `
<div
  class="fd-form-group"
>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <div
      class="fd-form-label"
      id="label3"
    >
      With Off Text
    </div>
    
        
    <label
      class="fd-switch__label"
    >
      
            
      <span
        class="fd-switch__text"
      >
        Off
      </span>
       
            
      <span
        class="fd-switch"
      >
        
                
        <input
          aria-labelledby="label3"
          class="fd-switch__input"
          id="y21Y677251"
          name=""
          type="checkbox"
          value=""
        />
        
                
        <div
          class="fd-switch__wrapper"
        >
          
                    
          <div
            class="fd-switch__track"
          >
            
                        
            <span
              class="fd-switch__handle"
              role="presentation"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </span>
      
        
    </label>
    
    
  </div>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <div
      class="fd-form-label"
      id="label4"
    >
      With On Text
    </div>
    
        
    <label
      class="fd-switch__label"
    >
      
            
      <span
        class="fd-switch__text"
      >
        On
      </span>
       
            
      <span
        class="fd-switch"
      >
        
                
        <input
          aria-labelledby="label4"
          checked=""
          class="fd-switch__input"
          id="y21653431"
          name=""
          type="checkbox"
          value=""
        />
        
                
        <div
          class="fd-switch__wrapper"
        >
          
                    
          <div
            class="fd-switch__track"
          >
            
                        
            <span
              class="fd-switch__handle"
              role="presentation"
            />
            
                    
          </div>
          
                
        </div>
        
            
      </span>
      
        
    </label>
    
    
  </div>
  

</div>
`;
